--- a/src/main/resources/templates/assets/search.html
+++ b/src/main/resources/templates/assets/search.html
@@ -110,28 +110,26 @@
                     </div>
                     <div class="form-group col-3 float-lg-left">
                       <label>影院名称：</label>
-                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                      <input type="text" class="form-control" name="cinemaName">
                     </div>
                     <div class="form-group col-3 float-lg-right">
-                      <label>影院经理：</label>
-                      <input type="text" class="form-control" placeholder="例：张先生" name="responsible">
+                      <label>影厅数量：</label>
+                      <input type="text" class="form-control" name="responsible">
                     </div>
                   </div>
                 </div>
                   <!-- /.card-body -->
-                <div class="form-group">
-                  <div class="row col-sm-4 float-right">
-                    <div style="margin-left: 175px;">
-                      <button type="submit" class="btn btn-primary">筛选</button>
-                      <span class="col-sm-2"> &nbsp; &nbsp;</span>
-                      <button type="button" class="btn btn-primary">导入</button>
-                      <span class="col-sm-2"> &nbsp; &nbsp;</span>
-                      <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
-                        <button type="button" class="btn btn-primary ">添加</button>
-                      </a>
-                    </div>
+                  <div class="form-group">
+                      <div class="card-footer">
+                          <div class="row float-right">
+                              <button type="submit" class="btn btn-primary">筛选</button>
+                              <button type="button" class="btn btn-primary">导入</button>
+                              <a href="/base/cinema/insert" style="color: #ffffff;">
+                                  <button type="button" class="btn btn-primary">添加</button>
+                              </a>
+                          </div>
+                      </div>
                   </div>
-                </div>
               </div>
             </form>
       </div>
