--- a/src/main/resources/templates/base/parts/show.html
+++ b/src/main/resources/templates/base/parts/show.html
@@ -138,14 +138,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="row col-sm-4 float-right">
-                                        <div style="margin-left: 180px;">
+                                    <div class="card-footer">
+                                        <div class="row float-right">
                                             <button type="submit" class="btn btn-primary">筛选</button>
-                                            <span class="col-sm-2"> &nbsp; &nbsp;</span>
                                             <button type="button" class="btn btn-primary">导入</button>
-                                            <span class="col-sm-2"> &nbsp; &nbsp;</span>
                                             <a href="/base/parts/insert" style="color: #ffffff;">
-                                                <button type="button" class="btn btn-primary ">添加</button>
+                                                <button type="button" class="btn btn-primary">添加</button>
                                             </a>
                                         </div>
                                     </div>
