--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -161,13 +161,11 @@
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body">
-                        <h5>服务器安装经验总结</h5>
-                        <p>服务器，也称伺服器，是提供计算服务的设备。由于服务器需要响应服务请求，并进行处理，
-                            因此一般来说服务器应具备承担服务并且保障服务的能力。服务器的构成包括处理器、硬盘、内存、系统总线等，
-                            和通用的计算机架构类似，但是由于需要提供高可靠的服务，因此在处理能力、稳定性、可靠性、安全性.</p>
+                        <h5>DP放映机放映时常见问题</h5>
+                        <p>影视行业DP放映机常见报错及处理方法</p>
                         <div class="row mb-3">
                             <div class="col-sm-6">
-                                <img class="img-fluid" th:src="@{/images/server.jpeg}" alt="Photo">
+                                <img class="img-fluid" th:src="@{/images/DP2K-10S right std angle jpg.jpg}" alt="Photo">
                             </div>
                             <!-- /.col -->
                             <div class="col-sm-6">
@@ -187,15 +185,10 @@
                             </div>
                             <!-- /.col -->
                         </div>
-                        <p>第一：我们首先应该配置服务器的外部接口。你应该已经知道如何做到这一点，并且可能已经完成了。
-                            如果你不这样做，那么现在就这样做。</p>
-                        <p>第二：现在我们调出内部接口。根据我们选择的数字，服务器的内部接口是192.168.40.254。
-                            所以我们必须配置该接口。</p>
+                        <p>放映员发现机器冒蓝灯。代表机器需要维护，或者即将需要维护了，维护办法可参照购买机器时附赠的维护说明。</p>
+                        <p>放映员发现机器冒黄灯。机器冒黄灯代表反映机器温度过热，此时应该将机房冷却设备打开，比如吹风机。要尽量、尽快降低机房内温度，否者机器可能会过热导致停映，画面失真，甚至其他危险情况。</p>
 
-                        <p>第三：设置路线。 我们现在可以与当地网络上的机器通信，但我们无法访问其他内部网络。
-                            这需要更多的代码行。为了访问其他子网上的其他计算机，我们需要一条路由来告知流量到Cisco路由器。
-                            这是那条线：＃/ sbin / route add -net 192.168.0.0 gw 192.168.254.254 netmask
-                            255.255.0.0 dev eth1</p>
+                        <p>本节仅讲述放映机出现蓝灯和黄灯处理办法，下节说出现红灯的情况及处理办法。</p>
 
 
 
