--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -111,7 +111,7 @@
                   <div class="mailbox-read-message">
                     <!-- info row -->
                     <div class="row invoice-info">
-                      <div class="col-sm-3">
+                      <div class="col-3">
                         <address>
                           <strong>
                             标准概览：
@@ -121,7 +121,7 @@
                           <img  class="attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height: 400px;">
                         </div>
                       </div>
-                      <div class="col-sm-6">
+                      <div class="col-6">
                         <address>
                           <strong>
                             标准解读：
@@ -131,7 +131,7 @@
                         <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fiyq5a7xu%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
                         <!--                        </video>-->
                       </div>
-                      <div class="col-sm-3">
+                      <div class="col-3">
                         <address>
                           <br/>
                           <br/>
