--- a/src/main/resources/templates/documents/standard.html
+++ b/src/main/resources/templates/documents/standard.html
@@ -140,9 +140,9 @@
             <div class="card-body">
               <div class="row form-group col-12">
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-                    <div style="padding-left:40px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                  <div style="border: 1px solid rgb(220,220,220);height: 100%;width: 100%;">
+                    <div style="padding-top:10px;">
+                      <img style="height: 100%; width: 100%;" class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
                     <div class="form-group row">
@@ -156,51 +156,48 @@
                   </div>
                 </div>
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-
-                    <div style="padding-left:40px; padding-top:10px;">
-                    <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                  <div style="border: 1px solid rgb(220,220,220);height: 100%;width: 100%;">
+                    <div style="padding-top:10px;">
+                      <img style="height: 100%; width: 100%;" class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="#"> 详情>> </a>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-
-                    <div style="padding-left:40px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                  <div style="border: 1px solid rgb(220,220,220);height: 100%;width: 100%;">
+                    <div style="padding-top:10px;">
+                      <img style="height: 100%; width: 100%;" class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="#"> 详情>> </a>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-
-                    <div style="padding-left:40px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                  <div style="border: 1px solid rgb(220,220,220);height: 100%;width: 100%;">
+                    <div style="padding-top:10px;">
+                      <img style="height: 100%; width: 100%;" class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="#"> 详情>> </a>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>
