--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -131,6 +131,12 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
+                    <a href="/documents/search" class="nav-link">
+                        <i class="fa fa-search nav-icon"></i>
+                        <p>综合检索</p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/documents/standard" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
                         <p>相关标准</p>
