--- a/src/main/resources/templates/task/task_search.html
+++ b/src/main/resources/templates/task/task_search.html
@@ -98,11 +98,17 @@
                   <div class="row">
                     <div class="form-group col-2">
                       <label>日期：</label>
-                      <input type="text" class="form-control" name="date">2019/12/17</input>
+                      <input type="text" class="form-control" name="date"></input>
                     </div>
                     <div class="form-group col-2">
                       <label>责任人：</label>
-                      <input type="text" class="form-control" name="responsible">李维</input>
+                      <select class="form-control" name="responsible">
+                        <option>李维</option>
+                        <option>曾真</option>
+                        <option>申立姗</option>
+                        <option>田由甲</option>
+                        <option>李俊</option>
+                      </select>
                     </div>
                     <div class="form-group col-2">
                       <label>影厅：</label>
@@ -118,7 +124,7 @@
                     <div class="form-group col-2">
                       <label>设备：</label>
                       <select class="form-control" name="equipment">
-                      <option>巴克放映机</option>
+                      <option>巴可放映机</option>
                       <option>戴尔服务器</option>
                       <option>华为服务器</option>
                       <option>惠普服务器</option>
