--- a/src/main/resources/templates/analysis/statistic_analysis.html
+++ b/src/main/resources/templates/analysis/statistic_analysis.html
@@ -128,7 +128,7 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <div id="barChart" style="height:30rem;"></div>
+                                <div id="barChart" style="height:400%;width: 100%;"></div>
                             </div>
                         </div>
                     </div>
