--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -126,11 +126,11 @@
               <div class="row form-group col-12">
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-                    <div style="padding-left:10px; padding-top:10px;">
+                    <div style="padding-top:10px;">
 
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height:200px;width:300px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">DDP2K-20C投影灯盖板拆卸方法</p>
+                    <p style="padding-right: 10px;">DDP2K-20C投影灯盖板拆卸方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -144,8 +144,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/后盖板安装.jpg}" style="height:200px;width:300px;">
+                    <div style=" padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/后盖板安装.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C后盖板安装方法</p>
                     <div class="form-group row">
@@ -161,8 +161,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/密封盖板安装.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/密封盖板安装.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C密封盖板安装方法</p>
                     <div class="form-group row">
@@ -178,10 +178,10 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/左盖板安装.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/左盖板安装.jpg}" style="height:100%;width:100%;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C左盖板安装方法</p>
+                    <p style="padding-right: 10px;">DP2K-20C左盖板安装方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -198,9 +198,9 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
                     <div style="padding-left:10px; padding-top:10px;">
 
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/前盖板安装.jpg}" style="height:200px;width:300px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/前盖板安装.jpg}" style="height:100%;width:100%;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C前盖板安装方法</p>
+                    <p style="padding-right: 10px;">DP2K-20C前盖板安装方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -214,8 +214,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/输入盖板安装.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/输入盖板安装.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C输入盖板拆卸方法</p>
                     <div class="form-group row">
@@ -230,8 +230,8 @@
                 </div><div class="col-3">
                 <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                  <div style="padding-left:10px; padding-top:10px;">
-                    <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/顶盖板安装.jpg}" style="height:200px;width:300px;">
+                  <div style="padding-top:10px;">
+                    <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/顶盖板安装.jpg}" style="height:100%;width:100%;">
                   </div>
                   <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C顶盖板拆卸方法</p>
                   <div class="form-group row">
@@ -247,8 +247,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头安装.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头安装.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C镜头安装方法</p>
                     <div class="form-group row">
@@ -264,8 +264,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/镜头拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C镜头拆卸方法</p>
                     <div class="form-group row">
@@ -280,8 +280,8 @@
                 </div>
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/前盖板拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/前盖板拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C前盖板拆卸方法</p>
                     <div class="form-group row">
@@ -297,8 +297,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/后盖板拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/后盖板拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C后盖板拆卸方法</p>
                     <div class="form-group row">
@@ -314,8 +314,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/密封盖板拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/密封盖板拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C密封盖板拆卸方法</p>
                     <div class="form-group row">
@@ -331,8 +331,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/左盖板拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/左盖板拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C左盖板拆卸方法</p>
                     <div class="form-group row">
@@ -348,8 +348,9 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height:100%;width:100%;"
+                      >
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C投影灯盖板拆卸方法</p>
                     <div class="form-group row">
@@ -365,8 +366,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/输入盖板拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/输入盖板拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C输入盖板拆卸方法</p>
                     <div class="form-group row">
@@ -382,8 +383,8 @@
                 <div class="col-3">
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:10px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/顶盖板拆卸.jpg}" style="height:200px;width:300px;">
+                    <div style="padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/顶盖板拆卸.jpg}" style="height:100%;width:100%;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C顶盖板拆卸方法</p>
                     <div class="form-group row">
